--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="script.js" defer></script>
         <meta charset="UTF-8">
         <meta name="description" content="Nurturing Young Brain">
+        <meta name="google-site-verification" content="PwKy9nXWzVub9wgROfRsclrV3wioijF1wk1TS9MLp2Q" />
         
     </head>
 
