--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
         </video><br>
 
-        <button type="button">welcome</button >
+        <button type="button">welcomeee</button >
         
     </div>
     </body>
