--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Crystal Peter Academy</title>
+        <title>Crystal Peter's Academy</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 
     <body>
     <div>
-        <h1>CRTSTAL PETER ACADEMY</h1><br>
+        <h1>CRTSTAL PETER'S ACADEMY</h1><br>
         <p>Ex Corper member Ebube of Crystal Peter Academy awarded during senth forth party</p>
         <video height="300" width="300" controls>
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
