--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <body>
     <ul class="ul">
-      <li class="li"><a class="a" href="#bio">Biography</a></li>
-      <li class="li"><a class="a" href="#achievements">Achievements</a></li>
-      <li class="li"><a class="a" href="#contact">Contact</a></li>
-     </ul>
-        <header>
+      <li class="li"><a class="a" href="#">About Us</a></li>
+      <li class="li"><a class="a" href="">Achievements</a></li>
+      <li class="li"><a class="a" href="">Contact</a></li>
+    </ul>
+    <header>
         <div class="container">
             <h1>Crystal Peter's Academy</h1>
             <p>Nurturing Young Brains</p>
