--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <body>
     <ul class="ul">
       <li class="li"><a class="a" href="#">About Us</a></li>
-      <li class="li"><a class="a" href="">Achievements</a></li>
+      <li class="li"><a class="a" href="">Adimission</a></li>
       <li class="li"><a class="a" href="">Contact</a></li>
+      <li class="li"><a class="a" href="">School Gallery</a></li>
+      <li class="li"><a class="a" href="">Our vission</a></li>
     </ul>
     <header>
         <div class="container">
@@ -61,25 +63,36 @@
                 <img src="images/meonsuit.jpg" alt="ebube ezeudu" class="profile-pic"type="image/jpeg" style="width:100%;height:60%">
             </ul>
         </div>
+    </section
+
+        <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact</h2>
+            <p><strong>Address:</strong> BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
+            <p><strong>Phone:</strong> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
+            <p><strong>Email:</strong> <a href="crystalpeteracademy@gmail.com "> crystalpeteracademy@gmail.com </a></p>
+        </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Ebube . All rights reserved.</p>
+            <p>&copy; 2025 Crystal Peter's Academy . All rights reserved.</p>
+            <p>Designed and Created by <a href="https://dreamstorealities.vercel.app/">Ex-corper Ebube</a>a</p>
         </div>
-        <a href="https://ng.linkedin.com/in/ebube-ezeudu-7321a0256" class="linkedin" target="_blank">
+        <a href="" class="tiktok" target="_blank">
+        <i class="bx bxl-tiktok" style="font-size:30px;text-decoration: none"></i> 
+      </a>
+        <a href="" class="linkedin" target="_blank">
         <i class="bx bxl-linkedin" style="font-size:30px;text-decoration: none"></i> 
       </a>
-        <a href="#" class="facebook" target="_blank">
+        <a href="" class="facebook" target="_blank">
         <i class="bx bxl-facebook" style="font-size:30px;text-decoration: none"></i> 
       </a>
-        <a href="https://x.com/ezeuduebubevict?s=21" class="twitter" target="_blank">
+        <a href="" class="twitter" target="_blank">
         <i class="bx bxl-twitter" style="font-size:30px;text-decoration: none"></i> 
       </a>
-        <a href="https://github.com/iam-ebube/" class="github" target="_blank">
-        <i class="bx bxl-github" style="font-size:30px;text-decoration: none"></i> 
-      </a>
-        <a href="https://www.instagram.com/ebubeezeudu?igsh=MTFpNWtvc3d6bWZudA%3D%3D&utm_source=qr" class="instagram" target="_blank">
+        
+        <a href="" class="instagram" target="_blank">
         <i class="bx bxl-instagram" style="font-size:30px;text-decoration: none"></i> 
       </a>
         <a href="https://wa.link/e2d0co" class="whatsapp" target="_blank">
