--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <ul class="ul">
       <li class="li"><a class="a" href="#">About Us</a></li>
       <li class="li"><a class="a" href="">Adimission</a></li>
-      <li class="li"><a class="a" href="">Contact</a></li>
+      <li class="li"><a class="a" href="">Contacts</a></li>
       <li class="li"><a class="a" href="">School Gallery</a></li>
-      <li class="li"><a class="a" href="">Our vission</a></li>
+      <li class="li"><a class="a" href="">Our vision</a></li>
     </ul>
     <header>
         <div class="container">
@@ -67,17 +67,17 @@
 
         <section id="contact" class="section">
         <div class="container">
-            <h2>Contact</h2>
+            <h2>Contacts</h2>
             <p><strong>Address:</strong> BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
-            <p><strong>Phone:</strong> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
-            <p><strong>Email:</strong> <a href="crystalpeteracademy@gmail.com "> crystalpeteracademy@gmail.com </a></p>
+            <p><strong>Phone:</strong> <a href="tel:+2348035261270" style="text-decoration:none;">+234 803 526 1270</a></p>
+            <p><strong>Email:</strong> <a href="crystalpeteracademy@gmail.com "style="text-decoration:none;"> crystalpeteracademy@gmail.com </a></p>
         </div>
     </section>
 
     <footer>
         <div class="container">
             <p>&copy; 2025 Crystal Peter's Academy . All rights reserved.</p>
-            <p>Designed and Created by <a href="https://dreamstorealities.vercel.app/">Ex-corper Ebube</a>a</p>
+            <p>Designed and Created by <a href="https://dreamstorealities.vercel.app/" style="text-decoration:none;">Ex-Corper Ebube</a></p>
         </div>
         <a href="" class="tiktok" target="_blank">
         <i class="bx bxl-tiktok" style="font-size:30px;text-decoration: none"></i> 
@@ -95,7 +95,7 @@
         <a href="" class="instagram" target="_blank">
         <i class="bx bxl-instagram" style="font-size:30px;text-decoration: none"></i> 
       </a>
-        <a href="https://wa.link/e2d0co" class="whatsapp" target="_blank">
+        <a href=" https://wa.me/2348035261270" class="whatsapp" target="_blank">
         <i class="bx bxl-whatsapp" style="font-size:30px;text-decoration: none"></i> 
       </a>
     </footer>    
