--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <body>
     <ul class="ul">
       <li class="li"><a class="a" href="#">About Us</a></li>
-      <li class="li"><a class="a" href="">Adimission</a></li>
-      <li class="li"><a class="a" href="">Contacts</a></li>
+      <li class="li"><a class="a" href="">Admission</a></li>
+      <li class="li"><a class="a" href="">Contact Us</a></li>
       <li class="li"><a class="a" href="">School Gallery</a></li>
-      <li class="li"><a class="a" href="">Our vision</a></li>
+      <li class="li"><a class="a" href="">Our Vision</a></li>
     </ul>
     <header>
         <div class="container">
@@ -67,8 +67,8 @@
 
         <section id="contact" class="section">
         <div class="container">
-            <h2>Contacts</h2>
-            <p><strong>Address:</strong> BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
+            <h2>Contact Us</h2>
+            <p><i class="bx bx-envelope" style="font-size:30px; text-decoration: none;"></i>  BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
             <p><strong>Phone:</strong> <a href="tel:+2348035261270" style="text-decoration:none;">+234 803 526 1270</a></p>
             <p><strong>Email:</strong> <a href="crystalpeteracademy@gmail.com "style="text-decoration:none;"> crystalpeteracademy@gmail.com </a></p>
         </div>
@@ -76,8 +76,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Crystal Peter's Academy . All rights reserved.</p>
-            <p>Designed and Created by <a href="https://dreamstorealities.vercel.app/" style="text-decoration:none;">Ex-Corper Ebube</a></p>
+            <p><small>&copy; 2025 Crystal Peter's Academy . All rights reserved.</small></p>
+            <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/" style="text-decoration:none;">Ex-Corper Ebube</a></small></p>
         </div>
         <a href="" class="tiktok" target="_blank">
         <i class="bx bxl-tiktok" style="font-size:30px;text-decoration: none"></i> 
