--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Crystal Peter's Academy</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style-mobile.css" media="only screen and (max-width: 600px)">
         <script src="script.js" defer></script>
         <meta charset="UTF-8">
         <meta name="description" content="Nurturing Young Brains">
