--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <section id="contact" class="section">
         <div class="container">
             <h2>Contact Us</h2>
-            <p><i class="bx bx-map" style="font-size:30px; text-decoration: none;"></i>  BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
-            <p><i class="bx bx-phone" style="font-size:30px; text-decoration: none;"></i><a href="tel:+2348035261270" style="text-decoration:none;">+234 803 526 1270</a></p>
-            <p><i class="bx bx-envelope" style="font-size:30px; text-decoration: none;"></i> <a href="crystalpeteracademy@gmail.com "style="text-decoration:none;">  crystalpeteracademy@gmail.com </a></p>
+            <p><i class="bx bx-map"  style="font-size: 30px; color: white; vertical-align: middle;"></i>  BEHIND EGUN BAKERY ALONG SODA KING COMPANY,SEE TO ME B/STOP IGBESA RD,OGUN STATE. </p>
+            <p><i class="bx bx-phone"  style="font-size: 30px; color: white; vertical-align: middle;"></i><a href="tel:+2348035261270" style="text-decoration:none;">+234 803 526 1270</a></p>
+            <p><i class="bx bx-envelope" style="font-size: 30px; color: white; vertical-align: middle;"></i> <a href="mailto:crystalpeteracademy@gmail.com "style="text-decoration:none;">  crystalpeteracademy@gmail.com </a></p>
         </div>
     </section>
 
