--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
 
     <body>
     <header>
-        <div class="container">
-            <h1>Crystal Peter's Academy</h1>
-            <p>Nurturing Young Brains</p>
-        </div>
-    </header>    
-        
-    <ul class="ul">
-      <li class="li"><a class="a" href="#">About Us</a></li>
-      <li class="li"><a class="a" href="">Admission</a></li>
-      <li class="li"><a class="a" href="">Contact Us</a></li>
-      <li class="li"><a class="a" href="">School Gallery</a></li>
-      <li class="li"><a class="a" href="">Our Vision</a></li>
+  <div class="container">
+    <i class="bx bx-menu mobile-menu-icon" id="menu-toggle"></i> <!-- Hamburger icon -->
+    <i class="bx bx-x mobile-menu-close" id="menu-close"></i>    <!-- Close icon -->
+    <h1>Crystal Peter's Academy</h1>
+    <p>Nurturing Young Brains</p>
+  </div>
+
+  <!-- Navigation menu (move from body to inside header for better control on mobile) -->
+  <nav id="mobile-nav">
+    <ul class="mobile-ul">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Admission</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">School Gallery</a></li>
+      <li><a href="#">Our Vision</a></li>
     </ul>
+  </nav>
+</header>
+
     
 
         <section id="bio" class="section">
