--- a/index.html
+++ b/index.html
@@ -4,81 +4,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DREAMS TO REALITY,ALL YOU HAVE TO DO IS JUST BELIEVE">
-    <title>DREAM CHASER</title>
+    <meta name="description" content="NURTURING YOUNG BRAINS ">
+    <title>CRYSTAL PETER'S ACADEMY</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
+    <link rel="stylesheet" href="style-mobile.css" media="only screen and (max-width: 600px)">
+    <link rel="icon" href="" type="image/png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
+    <meta name="google-site-verification" content="PwKy9nXWzVub9wgROfRsclrV3wioijF1wk1TS9MLp2Q" />
     <script src="script.js" defer></script>
 </head>
+    
 <body>
     <header>
         <div class="container">
-            <h1>Ebube Ezeudu</h1>
-            <p>Passionate Web Developer, Software Developer  & Believer</p>
+            <h1>Crystal Peter Academy </h1>
+            <p>Nurturing Young Brains</p>
         </div>
     </header>
 
-       <ul class="ul">
-      <li class="li"><a class="a" href="#bio">Biography</a></li>
-      <li class="li"><a class="a" href="#achievements">Achievements</a></li>
-      <li class="li"><a class="a" href="#contact">Contact</a></li>
+    <ul class="ul">
+      <li class="li"><a class="a" href="#">About Us</a></li>
+      <li class="li"><a class="a" href="#">Admission</a></li>
+      <li class="li"><a class="a" href="#">Contact Us</a></li>
+      <li class="li"><a class="a" href="">School Gallery</a></li>
+      <li class="li"><a class="a" href="#">Our Vision</a></li>
+       <li class="li"><a class="a" href="#">Statistics</a></li>
      </ul>
 
-    <section id="bio" class="section">
+    <section id="About us" class="section">
         <div class="container">
-            <h2>Biography</h2>
-            <img src="images/mee.jpg" alt="ebube ezeudu" class="profile-pic"type="image/jpeg" style="width:100%;height:60%">
+            <h2>About Us</h2>
+            <img src="" alt="ebube ezeudu" class="profile-pic"type="image/jpeg" >
             <p>Ebube Ezeudu is a skilled and creative web developer with a strong background in computer science. Over the years, he has designed and built many responsive, user-friendly websites for clients across various industries. His journey began in university where he studied computer science and quickly discovered his passion for front-end and back-end development.</p>
             <p>Ebube is a believer in clean code, continuous learning, and building products that make a difference.</p>
         </div>
     </section>
 
-    <section id="achievements" class="section">
+    <section id="Admission" class="section">
         <div class="container">
-            <h2>Achievements</h2>
+            <h2>Admission</h2>
             <ul>
                 <li>Developed over 50 fully responsive websites for clients worldwide.</li>
                 <li>Built a school management system that is used by over 100 institutions.</li>
                 <li>Contributed to several open-source projects on GitHub.</li>
                 <li>Mentored junior developers in several bootcamps.</li>
                 <li>Received Developer of the Year award (2024).</li>
-                <img src="images/meonsuit.jpg" alt="ebube ezeudu" class="profile-pic"type="image/jpeg" style="width:100%;height:60%">
+                <img src="images/meonsuit.jpg" alt="ebube ezeudu" class="profile-pic"type="image/jpeg">
             </ul>
         </div>
     </section>
 
-    <section id="contact" class="section">
+    <section id="Contact Us" class="section">
         <div class="container">
-            <h2>Contact</h2>
-            <p><strong>Address:</strong> Lagos,Nigeria</p>
-            <p><strong>Phone:</strong> <a href="tel:+2349076342705">+234 907 642 705</a></p>
-            <p><strong>Email:</strong> <a href="mailto:ebubeezeudu@gmail.com"> ebubeezeudu@gmail.com </a></p>
+            <h2>Contact Us</h2>
+            <p><i class="bx bx-map"></i>  Behind Egun Bakery Along Soda King Company,See To Me B/Stop Igbesa Rd, Ogun State</p>
+            <p><i class="bx bx-phone"></i> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
+            <p><i class="bx bx-envelope"></i> <a href="mailto:crystalpeteracademy@gmail.com"> crystalpeteracademy@gmail.com </a></p>
+        </div>
+    </section>
+
+    <section id="School Gallery" class="section">
+        <div class="container">
+            <h2>School Gallery</h2>
+            <p><i class="bx bx-map" style="font-size:30px; text-decoration: none;"></i>  Lagos,Nigeria</p>
+            <p><i class="bx bx-phone" style="font-size:30px; text-decoration: none;"></i> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
+            <p><i class="bx bx-envelope" style="font-size:30px; text-decoration: none;"></i> <a href="mailto:crystalpeteracademy@gmail.com"> crystalpeteracademy@gmail.com </a></p>
+        </div>
+    </section>
+
+    <section id="Our Vision" class="section">
+        <div class="container">
+            <h2>Our Vision</h2>
+            <p><i class="bx bx-map" style="font-size:30px; text-decoration: none;"></i>  Lagos,Nigeria</p>
+            <p><i class="bx bx-phone" style="font-size:30px; text-decoration: none;"></i> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
+            <p><i class="bx bx-envelope" style="font-size:30px; text-decoration: none;"></i> <a href="mailto:crystalpeteracademy@gmail.com"> crystalpeteracademy@gmail.com </a></p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Ebube . All rights reserved.</p>
+            <p><small>&copy; 2025 Crystal Peter's Academy . All rights reserved.</small></p>
+            <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#">Ex-Corper Ebube</a></small></p>
         </div>
-        <a href="https://ng.linkedin.com/in/ebube-ezeudu-7321a0256" class="linkedin" target="_blank">
-        <i class="bx bxl-linkedin" style="font-size:30px;text-decoration: none"></i> 
+
+        <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank">
+        <i class="bx bxl-tiktok" ></i> 
+      </a>
+        <a href="" class="linkedin" target="_blank">
+        <i class="bx bxl-linkedin" ></i> 
       </a>
         <a href="#" class="facebook" target="_blank">
-        <i class="bx bxl-facebook" style="font-size:30px;text-decoration: none"></i> 
+        <i class="bx bxl-facebook" ></i> 
       </a>
-        <a href="https://x.com/ezeuduebubevict?s=21" class="twitter" target="_blank">
-        <i class="bx bxl-twitter" style="font-size:30px;text-decoration: none"></i> 
+        <a href="" class="twitter" target="_blank">
+        <i class="bx bxl-twitter" ></i> 
       </a>
-        <a href="https://github.com/iam-ebube/" class="github" target="_blank">
-        <i class="bx bxl-github" style="font-size:30px;text-decoration: none"></i> 
+        
+        <a href="" class="instagram" target="_blank">
+        <i class="bx bxl-instagram" ></i> 
       </a>
-        <a href="https://www.instagram.com/ebubeezeudu?igsh=MTFpNWtvc3d6bWZudA%3D%3D&utm_source=qr" class="instagram" target="_blank">
-        <i class="bx bxl-instagram" style="font-size:30px;text-decoration: none"></i> 
-      </a>
-        <a href="https://wa.link/e2d0co" class="whatsapp" target="_blank">
-        <i class="bx bxl-whatsapp" style="font-size:30px;text-decoration: none"></i> 
+        <a href=" https://wa.me/2348035261270" class="whatsapp" target="_blank">
+        <i class="bx bxl-whatsapp" ></i> 
       </a>
     </footer>
 
