--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <header>
         <div class="container">
+             <i class="bx bx-menu" id="hamburger-icon"></i>
             <h1>Crystal Peter Academy </h1>
             <p>Nurturing Young Brains</p>
         </div>
