--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
              <i class="bx bx-menu" id="hamburger-icon"></i>
-            <h1>Crystal Peter Academy </h1>
+            <h1>Crystal Peter's Academy </h1>
             <p>Nurturing Young Brains</p>
         </div>
     </header>
