--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
         </div>
     </header>
 
-    <ul class="ul">
-      <li class="li"><a class="a" href="#">About Us</a></li>
-      <li class="li"><a class="a" href="#">Admission</a></li>
-      <li class="li"><a class="a" href="#">Contact Us</a></li>
-      <li class="li"><a class="a" href="">School Gallery</a></li>
-      <li class="li"><a class="a" href="#">Our Vision</a></li>
-       <li class="li"><a class="a" href="#">Statistics</a></li>
-     </ul>
+    <nav id="sidebar">
+  <i class="bx bx-x" id="close-icon"></i>
+  <ul>
+    <li><a href="#About us">About Us</a></li>
+    <li><a href="#Admission">Admission</a></li>
+    <li><a href="#Contact Us">Contact Us</a></li>
+    <li><a href="#School Gallery">School Gallery</a></li>
+    <li><a href="#Our Vision">Our Vision</a></li>
+    <li><a href="#Statistics">Statistics</a></li>
+  </ul>
+</nav>
+
 
     <section id="About us" class="section">
         <div class="container">
