--- a/index.html
+++ b/index.html
@@ -41,26 +41,28 @@
         <div class="container">
             <h2>About Us</h2>
             <img src="" alt="" class="profile-pic"type="image/jpeg" >
-            <p>Welcome to Crystal Peter Academy – Nurturing Young Brains Since 2020
-Crystal Peter Academy is more than just a school — it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.
- A Track Record of Excellence
-Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peter Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.
-Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.
-What Parents and Students Are Saying
-"Crystal Peter Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." 
- "I love my school! I learn new things every day, and my teachers make learning fun." — Precious, Year 5 Student
- "Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning." 
-Why Choose Crystal Peter Academy?
-Experienced and Passionate Educators
-Modern Classrooms and Learning Aids
-Clean, Safe, and Child-Friendly Environment
-Moral and Character Education
-Creative Arts, ICT, and Sports Programs
-Affordable School Fees with High-Quality Education
- Growing With You
+            <p>Welcome to Crystal Peter Academy – Nurturing Young Brains Since 2020.</p>
+<p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p>
+<p> A Track Record of Excellence</p>
+<p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peter Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
+</p>Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.</p>
+<p>What Parents and Students Are Saying</p>
+<p>"Crystal Peter Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." </p>
+ <p>"I love my school! I learn new things every day, and my teachers make learning fun." — Precious, Year 5 Student</p>
+ <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning."</p> 
+<p>Why Choose Crystal Peter Academy?</p>
+<p>Experienced and Passionate Educators</p>
+<p>Modern Classrooms and Learning Aids</p>
+<p>Clean, Safe, and Child-Friendly Environment</div>p>
+<p>Moral and Character Education</p>
+<p>Creative Arts, ICT, and Sports Programs</p>
+<p>Affordable School Fees with High-Quality Education</p>
+ <p>Growing With You</p>
 In just five years, we have seen amazing progress — not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
-At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.
+At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/><br/>
+                
 </p>
+<p>We are the shining star,God has made us shine!</p>            
             
         </div>
     </section>
