--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <h2>About Us</h2>
             <img src="" alt="" class="profile-pic"type="image/jpeg" >
-            <p><strong>Welcome to Crystal Peter Academy, Where We Nurture Young Brains Since 2020.<strong></p><br/><br/>
+            <p><strong>Welcome to Crystal Peter Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/><br/>
             <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/><br/>
             <p> <strong>A Track Record of Excellence</strong></p>
             <p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peter Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
