--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>Clean, Safe, and Child-Friendly Environment</p>
             <p>Moral and Character Education</p>
             <p>Creative Arts, ICT, and Sports Programs</p>
-            <p>Affordable School Fees with High-Quality Education</p>
+            <p>Affordable School Fees with High-Quality Education</p><br/><br/>
             <p><strong>Growing With You</strong></p>
             <p>In just five years, we have seen amazing progress — not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
             At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/><br/>
