--- a/index.html
+++ b/index.html
@@ -69,15 +69,21 @@
     <section id="Admission" class="section">
         <div class="container">
             <h2>Admission</h2>
-            <ul>
-                <li>Developed over 50 fully responsive websites for clients worldwide.</li>
-                <li>Built a school management system that is used by over 100 institutions.</li>
-                <li>Contributed to several open-source projects on GitHub.</li>
-                <li>Mentored junior developers in several bootcamps.</li>
-                <li>Received Developer of the Year award (2024).</li>
-                <img src="images/meonsuit.jpg" alt="ebube ezeudu" class="profile-pic"type="image/jpeg">
-            </ul>
-        </div>
+                <p><strong>Admission Now Open at Crystal Peter Academy!</strong></p><br/><br>
+               <p> Are you looking for a school that combines academic excellence with strong moral values, modern teaching, and a nurturing environment? Look no further!</p>
+                Crystal Peter Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p>
+                <p><strong>Admission is Ongoing – Hurry Now!</strong></p>
+                <p>Don't wait until it's too late! Give your child the best start in life with the right foundation. We are currently admitting pupils and students into the following classes:</p>
+                <p>KG1, KG2, and Nursery Classes</p>
+                <p>Primary 1 to Primary 6</p>
+                <p>Junior Secondary (JSS1 - JSS3)</p>
+                <p>Senior Secondary (SS1 - SS3)</p>
+                 <p><strong>Visit Us Today!</strong></p>
+                <p>Come to our school for on-the-spot registration and campus tour.
+                Behind Egun Bakery, Along Soda King Company, See-To-Me Bus Stop, Igbesa Road, Ogun State</p>
+                
+                 <p>Give your child the gift of quality education — Enroll today at Crystal Peter Academy!</p>
+            </div>
     </section>
 
     <section id="Contact Us" class="section">
