--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
         <div class="container">
             <h2>About Us</h2>
             <img src="" alt="" class="profile-pic"type="image/jpeg" >
-            <p><strong>Welcome to Crystal Peter Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/><br/>
-            <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/><br/>
+            <p><strong>Welcome to Crystal Peter Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/>
+            <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/>
             <p> <strong>A Track Record of Excellence</strong></p>
             <p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peter Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
-            <p>Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.</p><br/><br/>
+            <p>Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.</p><br/>
             <p><strong>What Parents and Students Are Saying</strong></p>
             <p>"Crystal Peter Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." </p>
             <p>"I love my school! I learn new things every day, and my teachers make learning fun." — Precious, Year 5 Student</p>
-            <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning."</p><br/><br/>
+            <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning."</p><br/>
             <p><strong>Why Choose Crystal Peter Academy?</strong></p>
             <p>Experienced and Passionate Educators</p>
             <p>Modern Classrooms and Learning Aids</p>
             <p>Clean, Safe, and Child-Friendly Environment</p>
             <p>Moral and Character Education</p>
             <p>Creative Arts, ICT, and Sports Programs</p>
-            <p>Affordable School Fees with High-Quality Education</p><br/><br/>
+            <p>Affordable School Fees with High-Quality Education</p><br/>
             <p><strong>Growing With You</strong></p>
             <p>In just five years, we have seen amazing progress — not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
-            At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/><br/>
+            At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/>
             </p>
             <p>We are the shining star,God has made us shine!</p>            
             
@@ -69,18 +69,18 @@
     <section id="Admission" class="section">
         <div class="container">
             <h2>Admission</h2>
-                <p><strong>Admission Now Open at Crystal Peter Academy!</strong></p><br/><br>
+                <p><strong>Admission Now Open at Crystal Peter Academy!</strong></p><br/>
                <p> Are you looking for a school that combines academic excellence with strong moral values, modern teaching, and a nurturing environment? Look no further!</p>
-                Crystal Peter Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p>
+                Crystal Peter Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p><br/>
                 <p><strong>Admission is Ongoing – Hurry Now!</strong></p>
                 <p>Don't wait until it's too late! Give your child the best start in life with the right foundation. We are currently admitting pupils and students into the following classes:</p>
                 <p>KG1, KG2, and Nursery Classes</p>
                 <p>Primary 1 to Primary 6</p>
                 <p>Junior Secondary (JSS1 - JSS3)</p>
-                <p>Senior Secondary (SS1 - SS3)</p>
+                <p>Senior Secondary (SS1 - SS3)</p><br/>
                  <p><strong>Visit Us Today!</strong></p>
                 <p>Come to our school for on-the-spot registration and campus tour.
-                Behind Egun Bakery, Along Soda King Company, See-To-Me Bus Stop, Igbesa Road, Ogun State</p>
+                Behind Egun Bakery, Along Soda King Company, See-To-Me Bus Stop, Igbesa Road, Ogun State</p><br/>
                 
                  <p>Give your child the gift of quality education — Enroll today at Crystal Peter Academy!</p>
             </div>
