--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
   </ul>
 </nav>
 
+    <section id="carousel" class="section">
+        <div class="carousel">
+          <img src="images/image1.jpg" class="carousel-image active" alt="Slide 1">
+          <img src="images/image2.jpg" class="carousel-image" alt="Slide 2">
+          <img src="images/image3.jpg" class="carousel-image" alt="Slide 3">
+          <img src="images/image4.jpg" class="carousel-image" alt="Slide 4">
+          <img src="images/image5.jpg" class="carousel-image" alt="Slide 5">
+          <img src="images/image6.jpg" class="carousel-image" alt="Slide 6">
+          <img src="images/image7.jpg" class="carousel-image" alt="Slide 3">
+        </div>
+
+    </section>
 
     <section id="About us" class="section">
         <div class="container">
