--- a/index.html
+++ b/index.html
@@ -97,13 +97,26 @@
     </section>
 
     <section id="Contact-Us" class="section">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p class="bx bx-map-text"><i class="bx bx-map"></i>  Behind Egun Bakery Along Soda King Company,See To Me B/Stop Igbesa Rd, Ogun State</p>
-            <p><i class="bx bx-phone"></i> <a href="tel:+2348035261270">+234 803 526 1270</a></p>
-            <p><i class="bx bx-envelope"></i> <a href="mailto:crystalpeteracademy@gmail.com"> crystalpeteracademy@gmail.com </a></p>
-        </div>
-    </section>
+  <div class="container">
+    <h2>Contact Us</h2>
+
+    <div class="contact-item">
+      <i class="bx bx-map"></i>
+      <span>Behind Egun Bakery Along Soda King Company, See To Me B/Stop Igbesa Rd, Ogun State</span>
+    </div>
+
+    <div class="contact-item">
+      <i class="bx bx-phone"></i>
+      <a href="tel:+2348035261270">+234 803 526 1270</a>
+    </div>
+
+    <div class="contact-item">
+      <i class="bx bx-envelope"></i>
+      <a href="mailto:crystalpeteracademy@gmail.com">crystalpeteracademy@gmail.com</a>
+    </div>
+  </div>
+</section>
+
 
     <section id="School-Gallery" class="section">
         <div class="container">
