--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <i class="bx bx-x" id="close-icon"></i>
   <ul>
      <li><a href="https://crystalpetersacademy.vercel.app/">Home</a></li> 
-    <li><a href="#About us">About Us</a></li>
+    <li><a href="#About-Us">About Us</a></li>
     <li><a href="#Admission">Admission</a></li>
-    <li><a href="#Contact Us">Contact Us</a></li>
-    <li><a href="#School Gallery">School Gallery</a></li>
-    <li><a href="#Our Vision">Our Vision</a></li>
+    <li><a href="#Contact-Us">Contact Us</a></li>
+    <li><a href="#School-Gallery">School Gallery</a></li>
+    <li><a href="#Our-Vision">Our Vision</a></li>
     <li><a href="#Statistics">Statistics</a></li>
   </ul>
 </nav>
@@ -47,7 +47,7 @@
 
     </section>
 
-    <section id="About-us" class="section">
+    <section id="About-Us" class="section">
         <div class="container">
             <h2>About Us</h2>
             <img src="" alt="" class="profile-pic"type="image/jpeg" >
