--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><a href="#Contact-Us">Contact Us</a></li>
     <li><a href="#School-Gallery">School Gallery</a></li>
     <li><a href="#Our-Vision">Our Vision</a></li>
-    <li><a href="www.facebook.com">Statistics</a></li>
+    <li><a href="https://www.emeraldschools.com/history/">Statistics</a></li>
   </ul>
 </nav>
 
