--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NURTURING YOUNG BRAINS ">
-    <title>CRYSTAL PETER'S ACADEMY</title>
+    <title>CRYSTAL PETERS ACADEMY</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-mobile.css" media="only screen and (max-width: 600px)">
     <link rel="icon" href="" type="image/png">
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
              <i class="bx bx-menu" id="hamburger-icon"></i>
-            <h1>Crystal Peter's Academy </h1>
+            <h1>Crystal Peters Academy </h1>
             <p>Nurturing Young Brains</p>
         </div>
     </header>
@@ -51,24 +51,26 @@
         <div class="container">
             <h2>About Us</h2>
             <img src="" alt="" class="profile-pic"type="image/jpeg" >
-            <p><strong>Welcome to Crystal Peter Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/>
+            <p><strong>Welcome to Crystal Peters Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/>
             <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/>
             <p> <strong>A Track Record of Excellence</strong></p>
-            <p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peter Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
+            <p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peters Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
             <p>Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.</p><br/>
             <p><strong>What Parents and Students Are Saying</strong></p>
-            <p>"Crystal Peter Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." </p>
-            <p>"I love my school! I learn new things every day, and my teachers make learning fun." — Precious, Year 5 Student</p>
-            <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning."</p><br/>
+            <p>"Crystal Peters Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." — <em>Mrs Olamide</em> </p><br/>
+            <p>"I love my school! I learn new things every day, and my teachers make learning fun." —<em> Justin, SS2 Student</em></p><br/>
+            <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning." — <em>Mrs Nwachukwu</em></p><br/>
             <p><strong>Why Choose Crystal Peter Academy?</strong></p>
-            <p>Experienced and Passionate Educators</p>
-            <p>Modern Classrooms and Learning Aids</p>
+            <ul>
+            <li><p>Experienced and Passionate Educators</p></li>
+            <li><p>Modern Classrooms and Learning Aids</p></li>
             <p>Clean, Safe, and Child-Friendly Environment</p>
-            <p>Moral and Character Education</p>
-            <p>Creative Arts, ICT, and Sports Programs</p>
-            <p>Affordable School Fees with High-Quality Education</p><br/>
+            <li><p>Moral and Character Education</p></li>
+            <li><p>Creative Arts, ICT, and Sports Programs</p></li>
+            <li><p>Affordable School Fees with High-Quality Education</p></li><br/>
+            </ul>    
             <p><strong>Growing With You</strong></p>
-            <p>In just five years, we have seen amazing progress — not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
+            <p>In just five years, we have seen amazing progress , not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
             At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/>
             </p>
             <p>We are the shining star,God has made us shine!</p>            
@@ -81,7 +83,7 @@
             <h2>Admission</h2>
                 <p><strong>Admission Now Open at Crystal Peter Academy!</strong></p><br/>
                <p> Are you looking for a school that combines academic excellence with strong moral values, modern teaching, and a nurturing environment? Look no further!</p>
-                Crystal Peter Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p><br/>
+                Crystal Peters Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p><br/>
                 <p><strong>Admission is Ongoing – Hurry Now!</strong></p>
                 <p>Don't wait until it's too late! Give your child the best start in life with the right foundation. We are currently admitting pupils and students into the following classes:</p>
                 <p>KG1, KG2, and Nursery Classes</p>
