--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                 Crystal Peters Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p><br/>
                 <p><strong>Admission is Ongoing – Hurry Now!</strong></p>
                 <p>Don't wait until it's too late! Give your child the best start in life with the right foundation. We are currently admitting pupils and students into the following classes:</p>
-                <p>KG1, KG2, and Nursery Classes</p>
-                <p>Primary 1 to Primary 6</p>
-                <p>Junior Secondary (JSS1 - JSS3)</p>
-                <p>Senior Secondary (SS1 - SS3)</p><br/>
+                <ul>
+                <li><p>KG1, KG2, and Nursery Classes</p></li>
+                <li><p>Primary 1 to Primary 6</p></li>
+                <li><p>Junior Secondary (JSS1 - JSS3)</p></li>
+                <li><p>Senior Secondary (SS1 - SS3)</p></li><br/>
+                </ul>    
                  <p><strong>Visit Us Today!</strong></p>
                 <p>Come to our school for on-the-spot registration and campus tour.
                 Behind Egun Bakery, Along Soda King Company, See-To-Me Bus Stop, Igbesa Road, Ogun State</p><br/>
